# CrewAIFriday

chatbot/: requirements.txt  setup.py
chatbot/src/chatbot/: crew.py  login.py  main.py  pyproject.toml
chatbot/src/chatbot/config/: agents.yaml  conf.py  creds.yaml  tasks.yaml
chatbot/src/chatbot/pages/: home.py  home1.py
chatbot/src/chatbot/utils/: utils.py
